Get activities implementation
