# backend/waveCoach/http/src/main/kotlin/waveCoach/http/model/output/ActivityListOutputModel.kt
@@ -1,0 +1,5 @@
+package waveCoach.http.model.output
+
+data class ActivityListOutputModel(
+    val activities: List<ActivityOutputModel>,
+)
