# backend/waveCoach/http/src/main/kotlin/waveCoach/http/model/output/ActivityOutputModel.kt
@@ -1,0 +1,8 @@
+package waveCoach.http.model.output
+
+data class ActivityOutputModel(
+    val id: Int,
+    val uid: Int,
+    val date: Long,
+    val type: String,
+)
